# kovi-cli

./: Cargo.toml  README_Cargo.md
.cargo/: config.toml
examples/: locale_test.rs
kovi-bot/: Cargo.toml
kovi-bot/src/: main.rs
locales/: en-US.ftl  zh-CN.ftl
src/: cmd.rs  locales.rs  main.rs  utils.rs
src/cmd/: add.rs  new_kovi.rs  new_plugin.rs  update.rs
