[package]
name = "kovi-cli"
version = "0.7.2"
edition = "2024"
description = "kovi cli"
license = "MPL-2.0"
authors = ["ThriceCola <thricecola@hotmail.com>"]
repository = "https://github.com/ThriceCola/Kovi"
readme = "README.md"
documentation = "https://thricecola.github.io/kovi-doc/"

[dependencies]
clap = { version = "4.5", features = ["derive", "unstable-doc"] }
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
colored = "3"
serde_json = "1.0"
clap-cargo = "0.14"
crates_io_api = "0.11.0"
fluent = "0.17"
unic-langid = { version = "0.9.5", features = ["macros"] }
anyhow = "1"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }


[[bin]]
name = "cargo-kovi"
path = "src/main.rs"

[target.'cfg(target_os = "windows")']
rustflags = ["-A", "dead_code", "-A", "unused_imports"]
